# costly-paper

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml  setup.py
data/: README.md
docs/: REPRODUCE.md
docs/manuscript/: Paradox_Explained_Manuscript_ProcB.md  SUPPLEMENTARY_MATERIALS.md  references.ris
scripts/: generate_all_figures.py  run_parameter_sensitivity_validation.py  run_temporal_validation.py
scripts/figure_generation/: create_all_figures_colorblind.py  create_environmental_figures_moderate.py  create_figure_10_temporal_dynamics.py  create_figure_2_model_dynamics.py  create_modified_price_equation.py  create_price_equation_figure.py  create_price_equation_validation.py
src/costly/: __init__.py  case_studies.py  parameter_exploration.py  sensitivity_analysis.py  simulation.py  visualization.py
src/costly_signaling_abm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_case_studies.py  test_simulation.py
